# mailing

./: .env.example  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_view.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mail/: admin.py  forms.py  models.py  service.py  urls.py  views.py
mail/management/commands/: my_com.py
mail/migrations/: 0001_initial.py  0002_alter_settingmail_mailing_time.py  0003_alter_settingmail_period.py  0004_alter_settingmail_period.py  0005_alter_log_mail_alter_mailing_setting.py  0006_log_setting_alter_mailing_setting_and_more.py  0007_alter_settingmail_status.py  0008_client_owner.py  0009_alter_settingmail_client.py  0010_alter_client_email.py  0011_mailing_owner_settingmail_owner.py
mail/templates/mail/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  log_list.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  settingmail_confirm_delete.html  settingmail_form.html  settingmail_list.html
mail/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_group.py  create_manager.py
users/migrations/: 0001_initial.py  0002_alter_user_mail_key.py  0003_alter_user_email_alter_user_mail_key.py  0004_alter_user_mail_key.py  0005_alter_user_mail_key.py
users/templates/users/: forggoten_password.html  login.html  register.html  (+1 more)
